tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__WolfEvolved-AAAAAAAAAAAAAAAAAAADnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 924,
  "prerequisites": [
    923
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The final frontier... A... wolf that is not even an Iron Maiden fan?... What did you expect, a super boss? Heh. No. The budget was too tight...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wolf: Evolved",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 1728000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    923
  ],
  "rewards": [],
  "tasks": []
}
